dev/files/fst-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: fst
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: fst
spec:
  gatewayClassName: fst
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
