dev/files/tcp-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-debug
  labels:
    app: tcp-debug
    service: tcp-debug
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: tcp-debug
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-debug
      version: v1
  template:
    metadata:
      labels:
        app: tcp-debug
        version: v1
    spec:
      serviceAccountName: tcp-debug
      containers:
        - image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          imagePullPolicy: IfNotPresent
          name: tcp-debug
          ports:
            - containerPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-debug
spec:
  parentRefs:
    - name: fst
      sectionName: grpc-non-tls
  rules:
    - backendRefs:
        - name: tcp-debug
          port: 3000
